# presenter/controller/user.go
@@ -21,14 +21,14 @@ func NewUserController(userService usecase.UserService) *UserController {
 
 // Update
 //
-//	@Summary		Update
-//	@Description	Update
-//	@Tags			User
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string		true	"authorization token"
-//	@Success		200				{object}	model.User	"success"
-//	@Router			/v1/api/users [PUT]
+// @Summary     Update
+// @Description Update
+// @Tags        User
+// @Accept      json
+// @Produce     json
+// @Param       Authorization header   string     true "authorization token"
+// @Success     200           {object} model.User "success"
+// @Router      /v1/api/users [PUT]
 func (h *UserController) Update(c echo.Context) error {
 	var req request.UpdateUserRequest
 	if err := c.Bind(&req); err != nil {
@@ -45,14 +45,14 @@ func (h *UserController) Update(c echo.Context) error {
 
 // GetList
 //
-//	@Summary		GetList
-//	@Description	GetList
-//	@Tags			User
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string			true	"authorization token"
-//	@Success		200				{object}	[]model.User	"success"
-//	@Router			/v1/api/users [GET]
+// @Summary     GetList
+// @Description GetList
+// @Tags        User
+// @Accept      json
+// @Produce     json
+// @Param       Authorization header   string       true "authorization token"
+// @Success     200           {object} []model.User "success"
+// @Router      /v1/api/users [GET]
 func (h *UserController) GetList(c echo.Context) error {
 	var req request.GetListUserRequest
 	if err := c.Bind(&req); err != nil {
@@ -69,15 +69,15 @@ func (h *UserController) GetList(c echo.Context) error {
 
 // Delete
 //
-//	@Summary		Delete
-//	@Description	Delete
-//	@Tags			User
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string					true	"authorization token"
-//	@Param			id				path		string					true	"id"
-//	@Success		200				{object}	entity.SimpleResponse	"success"
-//	@Router			/v1/api/users/{id} [DELETE]
+// @Summary     Delete
+// @Description Delete
+// @Tags        User
+// @Accept      json
+// @Produce     json
+// @Param       Authorization header   string                true "authorization token"
+// @Param       id            path     string                true "id"
+// @Success     200           {object} entity.SimpleResponse "success"
+// @Router      /v1/api/users/{id} [DELETE]
 func (h *UserController) Delete(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
 	err := h.userService.Delete(c.Request().Context(), id)
@@ -89,15 +89,15 @@ func (h *UserController) Delete(c echo.Context) error {
 
 // GetOne
 //
-//	@Summary		GetOne
-//	@Description	GetOne
-//	@Tags			User
-//	@Accept			json
-//	@Produce		json
-//	@Param			Authorization	header		string		true	"authorization token"
-//	@Param			id				path		string		true	"id"
-//	@Success		200				{object}	model.User	"success"
-//	@Router			/v1/api/users/{id} [GET]
+// @Summary     GetOne
+// @Description GetOne
+// @Tags        User
+// @Accept      json
+// @Produce     json
+// @Param       Authorization header   string     true "authorization token"
+// @Param       id            path     string     true "id"
+// @Success     200           {object} model.User "success"
+// @Router      /v1/api/users/{id} [GET]
 func (h *UserController) GetOne(c echo.Context) error {
 	id := utils.ParseStringIDFromUri(c)
 	res, err := h.userService.GetOne(c.Request().Context(), id)
