# presenter/docs/swagger.yaml
@@ -8,7 +8,7 @@ definitions:
     type: object
   entity.SimpleResponse:
     properties:
-      domain: {}
+      data: {}
       message:
         description: Code    int         `json:"code"`
         type: string
@@ -117,6 +117,10 @@ definitions:
     properties:
       content:
         type: string
+      files:
+        items:
+          type: string
+        type: array
       image:
         type: string
       slug:
@@ -162,21 +166,31 @@ definitions:
         maxLength: 20
         minLength: 6
         type: string
-      request_from:
-        enum:
-        - trail/
-        - web
-        - app
-        type: string
     required:
     - email
     - password
-    - request_from
+    type: object
+  request.UpdateFileRequest:
+    properties:
+      data:
+        items:
+          type: string
+        type: array
+      file_name:
+        type: string
+      id:
+        type: string
+    required:
+    - id
     type: object
   request.UpdatePostRequest:
     properties:
       content:
         type: string
+      files:
+        items:
+          type: string
+        type: array
       id:
         type: string
       image:
@@ -187,17 +201,7 @@ definitions:
         type: string
     type: object
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: This is Trail Backend API docs
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Trail Backend API
-  version: "2.0"
+  contact: {}
 paths:
   /v1/api/auth/call-back:
     post:
@@ -307,9 +311,9 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: UploadFileRequest
+      - description: file_request
         in: formData
-        name: UploadFileRequest
+        name: file_request
         required: true
         type: file
       responses:
@@ -330,9 +334,15 @@ paths:
         name: Authorization
         required: true
         type: string
-      - description: UploadFileRequest
+      - description: UpdateFileRequest
+        in: body
+        name: UpdateFileRequest
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateFileRequest'
+      - description: file_request
         in: formData
-        name: UploadFileRequest
+        name: file_request
         required: true
         type: file
       responses:
@@ -658,9 +668,4 @@ paths:
       summary: GetOne
       tags:
       - User
-securityDefinitions:
-  ApiKeyAuth:
-    in: header
-    name: Authorization
-    type: apiKey
 swagger: "2.0"
